--- a/program-5-day-hypertrophy.html
+++ b/program-5-day-hypertrophy.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="el">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -31,226 +31,227 @@
 
 <div class="page-container">
 
-<!-- Promo Bar -->
-<div class="promo-bar">
-    Black Friday Sale – Up to 70% OFF!
-</div>
+    <!-- Promo Bar -->
+    <div class="promo-bar">
+        Black Friday Εκπτώσεις – Έως 70% OFF!
+    </div>
 
-<!-- Header -->
-<header class="mobile-nav">
-    <button class="nav-icon nav-toggle" aria-label="Toggle menu">
-        <i class="fa-solid fa-bars"></i>
-    </button>
+    <!-- Header -->
+    <header class="mobile-nav">
+        <button class="nav-icon nav-toggle" aria-label="Toggle menu">
+            <i class="fa-solid fa-bars"></i>
+        </button>
 
-    <a href="index.html" class="nav-logo">
-        <img src="IMAGES/logo.png" alt="Logo">
-    </a>
+        <a href="index.html" class="nav-logo">
+            <img src="IMAGES/logo.png" alt="Logo">
+        </a>
 
-    <nav class="mobile-menu">
-        <a href="index.html">Home</a>
-        <a href="programs.html">Programs</a>
-        <a href="coaching.html">Coaching</a>
-        <a href="recipes.html">Recipes</a>
-        <a href="flexapil.html">Flexapil</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+        <nav class="mobile-menu">
+            <a href="index.html">Αρχική</a>
+            <a href="programs.html">Προγράμματα</a>
+            <a href="coaching.html">Coaching</a>
+            <a href="recipes.html">Συνταγές</a>
+            <a href="flexapil.html">Flexapil</a>
+            <a href="about.html">Σχετικά</a>
+            <a href="contact.html">Επικοινωνία</a>
+        </nav>
 
-    <button class="nav-icon nav-cart" aria-label="View cart">
-        <i class="fa-solid fa-cart-shopping"></i>
-    </button>
-</header>
+        <!--    <button class="nav-icon nav-cart" aria-label="View cart">-->
+        <!--        <i class="fa-solid fa-cart-shopping"></i>-->
+        <!--    </button>-->
+    </header>
 
-<!-- ============================= -->
-<!--       PRODUCT PAGE MAIN       -->
-<!-- ============================= -->
+    <!-- ============================= -->
+    <!--       PRODUCT PAGE MAIN       -->
+    <!-- ============================= -->
 
-<main class="product-wrapper">
+    <main class="product-wrapper">
 
-    <!-- Top section: cover + main info -->
-    <section class="product-hero">
-        <div class="product-cover"
-             style="background-image: url('IMAGES/5dayHypertrophy.png');">
-        </div>
-
-        <div class="product-main">
-            <p class="product-badge">Program • PDF Download</p>
-
-            <h1 class="product-title">5-Day Hypertrophy Program</h1>
-
-            <p class="product-subtitle">
-                A high-frequency, muscle-building training plan designed for intermediate and advanced lifters who want
-                to maximize size, strength, and aesthetics. Built for athletes who can commit to training 5 days per week
-                with intention and intensity.
-            </p>
-
-            <div class="product-meta-row">
-                <p class="product-price">€29.99</p>
-                <p class="product-details">Intermediate – Advanced • 10 Weeks • 5 days/week</p>
+        <!-- Top section: cover + main info -->
+        <section class="product-hero">
+            <div class="product-cover"
+                 style="background-image: url('IMAGES/5dayHypertrophy.png');">
             </div>
 
-            <button
-                    class="product-button-add"
-                    data-product-id="5-day-hypertrophy"
-                    data-price="29.99">
-                ADD TO CART
-            </button>
+            <div class="product-main">
+                <p class="product-badge">Πρόγραμμα • Λήψη PDF</p>
 
-            <p class="product-note">
-                <i class="fa-solid fa-bolt"></i>
-                Instant lifetime access • Downloadable PDF • Train in any gym
+                <h1 class="product-title">5-Day Hypertrophy Program</h1>
+
+                <p class="product-subtitle">
+                    Ένα πρόγραμμα προπόνησης υψηλής συχνότητας για μυϊκή ανάπτυξη, σχεδιασμένο για ενδιάμεσους και προχωρημένους
+                    ασκούμενους που θέλουν να μεγιστοποιήσουν μυϊκή μάζα, δύναμη και αισθητική. Ιδανικό για αθλητές που μπορούν
+                    να δεσμευτούν σε 5 προπονήσεις την εβδομάδα με στόχο και ένταση.
+                </p>
+
+                <div class="product-meta-row">
+                    <p class="product-price">€29.99</p>
+                    <p class="product-details">Μεσαίο – Προχωρημένο επίπεδο • 10 Εβδομάδες • 5 ημέρες/εβδομάδα</p>
+                </div>
+
+                <button
+                        class="product-button-add"
+                        data-product-id="5-day-hypertrophy"
+                        data-price="29.99">
+                    ΠΡΟΣΘΗΚΗ ΣΤΟ ΚΑΛΑΘΙ
+                </button>
+
+                <p class="product-note">
+                    <i class="fa-solid fa-bolt"></i>
+                    Άμεση, εφ’ όρου ζωής πρόσβαση • Κατεβάζεις το PDF • Ιδανικό για κάθε γυμναστήριο
+                </p>
+            </div>
+        </section>
+
+        <!-- Program description / what’s inside -->
+        <section class="product-section">
+            <h2 class="product-section-title">Τι Περιλαμβάνεται</h2>
+            <p>
+                Το <strong>5-Day Hypertrophy Program</strong> είναι φτιαγμένο για ασκούμενους που θέλουν ένα δομημένο,
+                απαιτητικό και επαναλαμβανόμενο πλάνο για μέγιστη μυϊκή ανάπτυξη. Κάθε προπόνηση είναι σχεδιασμένη ώστε
+                να «χτυπά» κάθε μυϊκή ομάδα με τη συχνότητα και τον όγκο που χρειάζεται για πραγματική πρόοδο &mdash;
+                χωρίς περιττό όγκο ή μαντεψιές.
             </p>
-        </div>
-    </section>
 
-    <!-- Program description / what’s inside -->
-    <section class="product-section">
-        <h2 class="product-section-title">What You Get</h2>
-        <p>
-            The <strong>5-Day Hypertrophy Program</strong> is built for lifters who want a structured, intense, and
-            repeatable plan for maximum muscle growth. Every training session is designed to hit each muscle group with
-            the frequency and volume needed for real progress &mdash; without junk volume or guesswork.
-        </p>
+            <ul class="product-list">
+                <li>Πλήρες 5ήμερο hypertrophy split (Push • Pull • Legs • Upper • Arms/Shoulders)</li>
+                <li>Δομημένο πλάνο προόδου 10 εβδομάδων, επαναλήψιμο για μακροχρόνια κέρδη</li>
+                <li>Οδηγίες για ζέσταμα, ενεργοποίηση και βασική κινητικότητα</li>
+                <li>Επιλογή ασκήσεων βελτιστοποιημένη για υπερτροφία και προστασία των αρθρώσεων</li>
+                <li>Οδηγίες RPE και προόδου ώστε κάθε σετ να έχει ξεκάθαρο σκοπό</li>
+                <li>Tips για αποκατάσταση, τεχνικές έντασης και διατήρηση της προόδου στο χρόνο</li>
+            </ul>
+        </section>
 
-        <ul class="product-list">
-            <li>Complete 5-day hypertrophy split (Push • Pull • Legs • Upper • Arms/Shoulders)</li>
-            <li>10-week structured progression model, repeatable for long-term gains</li>
-            <li>Warm-up, activation, and basic mobility guidelines</li>
-            <li>Exercise selection optimized for hypertrophy and joint safety</li>
-            <li>RPE and progression instructions so every set has a clear purpose</li>
-            <li>Tips for recovery, intensity techniques, and sustaining progress over time</li>
-        </ul>
-    </section>
+        <!-- Who it’s for -->
+        <section class="product-section">
+            <h2 class="product-section-title">Είναι Αυτό το Πρόγραμμα για Εσένα;</h2>
+            <p>Το πρόγραμμα είναι ιδανικό αν:</p>
+            <ul class="product-list">
+                <li>Θέλεις να χτίσεις μυϊκή μάζα, δύναμη και ένα ισορροπημένο, αισθητικό σώμα</li>
+                <li>Προτιμάς ένα ξεκάθαρο, δομημένο πλάνο αντί να μαντεύεις κάθε προπόνηση</li>
+                <li>Σου αρέσει η προπόνηση με υψηλή συχνότητα (κάθε μυϊκή ομάδα 2–3 φορές/εβδομάδα)</li>
+                <li>Είσαι σε ενδιάμεσο ή προχωρημένο επίπεδο και έτοιμος/η να προπονείσαι με στόχο και συγκέντρωση</li>
+                <li>Θέλεις ένα επαναλήψιμο hypertrophy σύστημα που μπορείς να τρέχεις πολλές φορές τον χρόνο</li>
+            </ul>
+        </section>
 
-    <!-- Who it’s for -->
-    <section class="product-section">
-        <h2 class="product-section-title">Is This Program For You?</h2>
-        <p>This program is a great fit if you:</p>
-        <ul class="product-list">
-            <li>Want to build muscle, strength, and a balanced aesthetic physique</li>
-            <li>Prefer a clear, structured plan instead of guessing your workouts</li>
-            <li>Enjoy training with higher frequency (each muscle group 2–3× per week)</li>
-            <li>Are at an intermediate to advanced level and ready to train with intent</li>
-            <li>Want a repeatable hypertrophy system you can run multiple times per year</li>
-        </ul>
-    </section>
-
-    <!-- Reviews -->
-    <section class="product-section product-reviews">
-        <div class="product-reviews-header">
-            <h2 class="product-section-title">Reviews</h2>
-            <p class="product-rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-regular fa-star"></i>
-                <span>4.7 / 5 (41 reviews)</span>
-            </p>
-        </div>
-
-        <div class="reviews-grid">
-
-            <article class="review-card">
-                <p class="review-name">Nikos P.</p>
-                <p class="review-stars">
+        <!-- Reviews -->
+        <section class="product-section product-reviews">
+            <div class="product-reviews-header">
+                <h2 class="product-section-title">Κριτικές</h2>
+                <p class="product-rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
+                    <span>4.7 / 5 (41 κριτικές)</span>
                 </p>
-                <p class="review-text">
-                    Stronger, fuller, better pumps. The structure is perfect and every week pushes you just enough
-                    without burning you out.
-                </p>
-            </article>
-
-            <article class="review-card">
-                <p class="review-name">Maria K.</p>
-                <p class="review-stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </p>
-                <p class="review-text">
-                    The best hypertrophy plan I’ve tried. I finally had a clear path for how to progress week to week.
-                    No more random workouts.
-                </p>
-            </article>
-
-            <article class="review-card">
-                <p class="review-name">George L.</p>
-                <p class="review-stars">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star-half-stroke"></i>
-                    <i class="fa-regular fa-star"></i>
-                </p>
-                <p class="review-text">
-                    My back and shoulders finally started to grow again. Great volume, clear progression, and easy to
-                    follow even on busy weeks.
-                </p>
-            </article>
-
-        </div>
-    </section>
-
-</main>
-
-<!-- ============================= -->
-<!--              FOOTER           -->
-<!-- ============================= -->
-
-<footer class="site-footer">
-    <div class="footer-top">
-        <div class="footer-columns">
-            <div class="footer-column">
-                <h4 class="footer-heading">PROGRAMS</h4>
-                <a href="programs.html" class="footer-link">Training Programs</a>
-                <a href="coaching.html" class="footer-link">Online Coaching</a>
             </div>
 
-            <div class="footer-column">
-                <h4 class="footer-heading">SPONSORS</h4>
-                <a href="#" class="footer-link">Flexapil</a>
-                <a href="#" class="footer-link">Underarmour</a>
-                <a href="#" class="footer-link">Firtech</a>
+            <div class="reviews-grid">
+
+                <article class="review-card">
+                    <p class="review-name">Nikos P.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Πιο δυνατός, πιο γεμάτος, καλύτερα pumps. Η δομή είναι άψογη και κάθε εβδομάδα σε πιέζει
+                        όσο πρέπει χωρίς να σε «καίει».
+                    </p>
+                </article>
+
+                <article class="review-card">
+                    <p class="review-name">Maria K.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Το καλύτερο hypertrophy πρόγραμμα που έχω δοκιμάσει. Επιτέλους είχα ξεκάθαρο πλάνο για το πώς
+                        να προοδεύω εβδομάδα με την εβδομάδα. Τέλος στα τυχαία workouts.
+                    </p>
+                </article>
+
+                <article class="review-card">
+                    <p class="review-name">George L.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Η πλάτη και οι ώμοι μου επιτέλους άρχισαν να μεγαλώνουν ξανά. Πολύ καλός όγκος, ξεκάθαρη
+                        πρόοδος και εύκολο να το ακολουθήσεις ακόμα και σε «γεμάτες» εβδομάδες.
+                    </p>
+                </article>
+
+            </div>
+        </section>
+
+    </main>
+
+    <!-- ============================= -->
+    <!--              FOOTER           -->
+    <!-- ============================= -->
+
+    <footer class="site-footer">
+        <div class="footer-top">
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h4 class="footer-heading">ΠΡΟΓΡΑΜΜΑΤΑ</h4>
+                    <a href="programs.html" class="footer-link">Προγράμματα Προπόνησης</a>
+                    <a href="coaching.html" class="footer-link">Online Coaching</a>
+                </div>
+
+                <div class="footer-column">
+                    <h4 class="footer-heading">ΧΟΡΗΓΟΙ</h4>
+                    <a href="#" class="footer-link">Flexapil</a>
+                    <a href="https://www.underarmour.gr/" target="_blank" class="footer-link">Underarmour</a>
+                    <a href="https://www.firtech.gr/" target="_blank" class="footer-link">Firtech</a>
+                </div>
+            </div>
+
+            <div class="footer-newsletter">
+                <h4 class="footer-heading">
+                    ΛΑΒΕ ΤΟ ΜΗΝΙΑΙΟ NEWSLETTER ΜΟΥ, 1 ΠΑΡΑΓΡΑΦΟ ΧΩΡΙΣ ΦΛΟΥΦΛΑ. ΔΩΡΕΑΝ!
+                </h4>
+
+                <form class="newsletter-form">
+                    <input type="email" class="newsletter-input" placeholder="Το Email σου" required />
+                    <button type="submit" class="newsletter-button">ΕΓΓΡΑΦΗ</button>
+                </form>
+
+                <div class="footer-social">
+                    <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#" aria-label="X"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
             </div>
         </div>
 
-        <div class="footer-newsletter">
-            <h4 class="footer-heading">
-                GET MY ZERO FLUFF, 1 PARAGRAPH WEEKLY NEWSLETTER. FOR FREE!
-            </h4>
-
-            <form class="newsletter-form">
-                <input type="email" class="newsletter-input" placeholder="Your Email Address" required />
-                <button type="submit" class="newsletter-button">SIGN UP</button>
-            </form>
-
-            <div class="footer-social">
-                <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
-                <a href="#" aria-label="X"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+        <div class="footer-bottom">
+            <div class="footer-legal">
+                <a href="privacy.html" class="footer-link">ΠΟΛΙΤΙΚΗ ΑΠΟΡΡΗΤΟΥ</a>
+                <span class="footer-separator">|</span>
+                <a href="terms.html" class="footer-link">ΟΡΟΙ ΧΡΗΣΗΣ</a>
             </div>
-        </div>
-    </div>
 
-    <div class="footer-bottom">
-        <div class="footer-legal">
-            <a href="privacy.html" class="footer-link">PRIVACY POLICY</a>
-            <span class="footer-separator">|</span>
-            <a href="terms.html" class="footer-link">TERMS OF SERVICE</a>
+            <p class="footer-copy">© 2025 Tasos Misailidis. Με επιφύλαξη παντός δικαιώματος.</p>
         </div>
-
-        <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
-    </div>
-</footer>
+    </footer>
 
 </div>
 
