--- a/program-leg-power.html
+++ b/program-leg-power.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="el">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -30,195 +30,197 @@
 
 <div class="page-container">
 
-<div class="promo-bar">
-    Black Friday Sale – Up to 70% OFF!
-</div>
+    <div class="promo-bar">
+        Black Friday Εκπτώσεις – Έως 70% OFF!
+    </div>
 
-<header class="mobile-nav">
-    <button class="nav-icon nav-toggle" aria-label="Toggle menu">
-        <i class="fa-solid fa-bars"></i>
-    </button>
-    <a href="index.html" class="nav-logo">
-        <img src="IMAGES/logo.png" alt="Logo">
-    </a>
+    <header class="mobile-nav">
+        <button class="nav-icon nav-toggle" aria-label="Toggle menu">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <a href="index.html" class="nav-logo">
+            <img src="IMAGES/logo.png" alt="Logo">
+        </a>
 
-    <nav class="mobile-menu">
-        <a href="index.html">Home</a>
-        <a href="programs.html">Programs</a>
-        <a href="coaching.html">Coaching</a>
-        <a href="recipes.html">Recipes</a>
-        <a href="flexapil.html">Flexapil</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+        <nav class="mobile-menu">
+            <a href="index.html">Αρχική</a>
+            <a href="programs.html">Προγράμματα</a>
+            <a href="coaching.html">Coaching</a>
+            <a href="recipes.html">Συνταγές</a>
+            <a href="flexapil.html">Flexapil</a>
+            <a href="about.html">Σχετικά</a>
+            <a href="contact.html">Επικοινωνία</a>
+        </nav>
 
-    <button class="nav-icon nav-cart" aria-label="View cart">
-        <i class="fa-solid fa-cart-shopping"></i>
-    </button>
-</header>
+        <!--    <button class="nav-icon nav-cart" aria-label="View cart">-->
+        <!--        <i class="fa-solid fa-cart-shopping"></i>-->
+        <!--    </button>-->
+    </header>
 
-<main class="product-wrapper">
+    <main class="product-wrapper">
 
-    <section class="product-hero">
-        <div class="product-cover"
-             style="background-image: url('IMAGES/legPower.png');"></div>
+        <section class="product-hero">
+            <div class="product-cover"
+                 style="background-image: url('IMAGES/legPower.png');"></div>
 
-        <div class="product-main">
-            <p class="product-badge">Program • PDF Download</p>
+            <div class="product-main">
+                <p class="product-badge">Πρόγραμμα • Λήψη PDF</p>
 
-            <h1 class="product-title">Leg Power & Density Program</h1>
+                <h1 class="product-title">Leg Power &amp; Density Program</h1>
 
-            <p class="product-subtitle">
-                The Leg Power &amp; Density Program by Tasos Misailidis is a focused 4-day lower-body specialization plan
-                designed to build strength, power, and muscular density through proven training science and precision
-                technique. Every session targets quads, hamstrings, glutes, and calves with a blend of heavy compounds
-                and high-volume accessory work, following Tasos’ signature approach of controlled execution,
-                intelligent progression, and perfect form under load.
-            </p>
+                <p class="product-subtitle">
+                    Το Leg Power &amp; Density Program από τον Tasos Misailidis είναι ένα εξειδικευμένο 4ήμερο πρόγραμμα
+                    για κάτω σώμα, σχεδιασμένο για να χτίσει δύναμη, ισχύ και μυϊκή πυκνότητα μέσα από αποδεδειγμένες
+                    αρχές προπόνησης και ακριβή τεχνική. Κάθε προπόνηση στοχεύει τετρακέφαλους, οπίσθιους μηριαίους,
+                    γλουτούς και γάμπες με έναν συνδυασμό βαριών βασικών ασκήσεων και υψηλού όγκου βοηθητικών,
+                    ακολουθώντας την signature προσέγγιση του Tasos: ελεγχόμενη εκτέλεση, έξυπνη προοδευτικότητα
+                    και άψογη τεχνική υπό φορτίο.
+                </p>
 
-            <div class="product-meta-row">
-                <p class="product-price">€29.99</p>
-                <p class="product-details">Intermediate • 8 Weeks • 4 days/week</p>
+                <div class="product-meta-row">
+                    <p class="product-price">€29.99</p>
+                    <p class="product-details">Μεσαίο επίπεδο • 8 Εβδομάδες • 4 ημέρες/εβδομάδα</p>
+                </div>
+
+                <button
+                        class="product-button-add"
+                        data-product-id="leg-power"
+                        data-price="29.99">
+                    ΠΡΟΣΘΗΚΗ ΣΤΟ ΚΑΛΑΘΙ
+                </button>
+
+                <p class="product-note">
+                    <i class="fa-solid fa-bolt"></i>
+                    Εξειδίκευση κάτω σώματος • Εστίαση σε δύναμη &amp; ισχύ • Ιδανικό για κάθε γυμναστήριο
+                </p>
             </div>
+        </section>
 
-            <button
-                    class="product-button-add"
-                    data-product-id="leg-power"
-                    data-price="29.99">
-                ADD TO CART
-            </button>
-
-            <p class="product-note">
-                <i class="fa-solid fa-bolt"></i>
-                Lower-body specialization • Strength &amp; power focused • Train in any gym
+        <section class="product-section">
+            <h2 class="product-section-title">Τι Περιλαμβάνεται</h2>
+            <p>
+                Το <strong>Leg Power &amp; Density Program</strong> είναι φτιαγμένο για ασκούμενους που παίρνουν σοβαρά
+                την ανάπτυξη του κάτω σώματός τους. Κάθε εβδομάδα είναι δομημένη ώστε να «χτυπά» τετρακέφαλους,
+                οπίσθιους μηριαίους, γλουτούς και γάμπες με την ακριβή ισορροπία βαριάς προπόνησης, όγκου και
+                τεχνικών έντασης που χρειάζονται για πραγματικά κέρδη σε δύναμη και μάζα.
             </p>
-        </div>
-    </section>
+            <ul class="product-list">
+                <li>4ήμερο πρόγραμμα εξειδίκευσης κάτω σώματος με έμφαση σε δύναμη και πυκνότητα</li>
+                <li>8-εβδομάδων μοντέλο προόδου που μπορείς να επαναλαμβάνεις για συνεχή αποτελέσματα</li>
+                <li>Βαριές βασικές ασκήσεις (καθίσματα, hip hinges, lunges) σε συνδυασμό με στοχευμένα βοηθητικά</li>
+                <li>Ξεκάθαρες οδηγίες για ζέσταμα, ενεργοποίηση και «μάζεμα» κορμού για ασφαλέστερα βαριά lifts</li>
+                <li>Οδηγίες RPE και προοδευτικότητας ώστε να ξέρεις πότε και πώς να ανεβάζεις κιλά ή όγκο</li>
+                <li>Coaching cues και tips εκτέλεσης για μέγιστη τάση σε κάθε επανάληψη</li>
+            </ul>
+        </section>
 
-    <section class="product-section">
-        <h2 class="product-section-title">What You Get</h2>
-        <p>
-            The <strong>Leg Power &amp; Density Program</strong> is built for lifters who are serious about bringing
-            up their lower body. Each week is structured to hit quads, hamstrings, glutes, and calves with the exact
-            balance of heavy lifting, volume, and intensity techniques needed for real strength and size gains.
-        </p>
-        <ul class="product-list">
-            <li>4-day lower-body specialization split focused on strength and density</li>
-            <li>8-week progression model you can repeat for continued results</li>
-            <li>Heavy compound lifts (squats, hinges, lunges) combined with targeted accessories</li>
-            <li>Clear warm-up, activation, and bracing guidelines for safer heavy lifting</li>
-            <li>RPE and progression instructions so you know when and how to push load or volume</li>
-            <li>Coaching cues and execution tips to maximize tension on every rep</li>
-        </ul>
-    </section>
+        <section class="product-section">
+            <h2 class="product-section-title">Είναι Αυτό το Πρόγραμμα για Εσένα;</h2>
+            <p>Το πρόγραμμα είναι ιδανικό αν:</p>
+            <ul class="product-list">
+                <li>Τα πόδια σου «υστερούν» και θέλεις επιτέλους να τα φέρεις στο επίπεδο του upper body</li>
+                <li>Θέλεις να χτίσεις πραγματική δύναμη κάτω σώματος, όχι μόνο ένα πρόσκαιρο pump</li>
+                <li>Σου αρέσει η βαριά προπόνηση με βασικές ασκήσεις σε συνδυασμό με στοχευμένα accessories</li>
+                <li>Μπορείς να δεσμευτείς σε 4 απαιτητικές προπονήσεις κάτω σώματος την εβδομάδα</li>
+                <li>Προπονείσαι σε γυμναστήριο με βασικό εξοπλισμό: squat rack, μπάρες, μηχανήματα και αλτήρες</li>
+            </ul>
+        </section>
 
-    <section class="product-section">
-        <h2 class="product-section-title">Is This Program For You?</h2>
-        <p>This program is perfect if you:</p>
-        <ul class="product-list">
-            <li>Have lagging legs and want to finally bring them up</li>
-            <li>Want to build real lower-body strength, not just a pump</li>
-            <li>Enjoy heavy compound lifting paired with focused accessory work</li>
-            <li>Can commit to 4 intense lower-body sessions per week</li>
-            <li>Train in a gym with basic equipment: rack, barbells, machines, and dumbbells</li>
-        </ul>
-    </section>
-
-    <section class="product-section product-reviews">
-        <div class="product-reviews-header">
-            <h2 class="product-section-title">Reviews</h2>
-            <p class="product-rating">
-                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                <i class="fa-regular fa-star"></i>
-                <span>4.6 / 5 (24 reviews)</span>
-            </p>
-        </div>
-
-        <div class="reviews-grid">
-            <article class="review-card">
-                <p class="review-name">Stavros G.</p>
-                <p class="review-stars">
+        <section class="product-section product-reviews">
+            <div class="product-reviews-header">
+                <h2 class="product-section-title">Κριτικές</h2>
+                <p class="product-rating">
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
+                    <span>4.6 / 5 (24 κριτικές)</span>
                 </p>
-                <p class="review-text">
-                    My quads and glutes finally caught up with my upper body. Heavy but very structured. I always knew
-                    what I was walking into each session.
-                </p>
-            </article>
-
-            <article class="review-card">
-                <p class="review-name">Anna P.</p>
-                <p class="review-stars">
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </p>
-                <p class="review-text">
-                    The focus on technique and control changed how I train legs. Stronger, denser, and more confident
-                    under the bar.
-                </p>
-            </article>
-
-            <article class="review-card">
-                <p class="review-name">Marios T.</p>
-                <p class="review-stars">
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>
-                    <i class="fa-regular fa-star"></i>
-                </p>
-                <p class="review-text">
-                    Tough sessions but the results are worth it. My squat and deadlift both went up and my legs look
-                    noticeably fuller.
-                </p>
-            </article>
-        </div>
-    </section>
-
-</main>
-
-<footer class="site-footer">
-    <div class="footer-top">
-        <div class="footer-columns">
-            <div class="footer-column">
-                <h4 class="footer-heading">PROGRAMS</h4>
-                <a href="programs.html" class="footer-link">Training Programs</a>
-                <a href="coaching.html" class="footer-link">Online Coaching</a>
             </div>
-            <div class="footer-column">
-                <h4 class="footer-heading">SPONSORS</h4>
-                <a href="#" class="footer-link">Flexapil</a>
-                <a href="#" class="footer-link">Underarmour</a>
-                <a href="#" class="footer-link">Firtech</a>
+
+            <div class="reviews-grid">
+                <article class="review-card">
+                    <p class="review-name">Stavros G.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Οι τετρακέφαλοι και οι γλουτοί μου επιτέλους έφτασαν το upper body. Βαριές αλλά πολύ δομημένες
+                        προπονήσεις. Ήξερα πάντα τι με περιμένει σε κάθε session.
+                    </p>
+                </article>
+
+                <article class="review-card">
+                    <p class="review-name">Anna P.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Η έμφαση στην τεχνική και τον έλεγχο άλλαξε τον τρόπο που προπονώ πόδια. Πιο δυνατή, πιο «γεμάτα» πόδια
+                        και πολύ μεγαλύτερη σιγουριά κάτω από τη μπάρα.
+                    </p>
+                </article>
+
+                <article class="review-card">
+                    <p class="review-name">Marios T.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Δύσκολες προπονήσεις αλλά αξίζει. Το squat και το deadlift μου ανέβηκαν αισθητά και τα πόδια μου
+                        δείχνουν εμφανώς πιο «γεμάτα».
+                    </p>
+                </article>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="site-footer">
+        <div class="footer-top">
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h4 class="footer-heading">ΠΡΟΓΡΑΜΜΑΤΑ</h4>
+                    <a href="programs.html" class="footer-link">Προγράμματα Προπόνησης</a>
+                    <a href="coaching.html" class="footer-link">Online Coaching</a>
+                </div>
+                <div class="footer-column">
+                    <h4 class="footer-heading">ΧΟΡΗΓΟΙ</h4>
+                    <a href="#" class="footer-link">Flexapil</a>
+                    <a href="https://www.underarmour.gr/" target="_blank" class="footer-link">Underarmour</a>
+                    <a href="https://www.firtech.gr/" target="_blank" class="footer-link">Firtech</a>
+                </div>
+            </div>
+            <div class="footer-newsletter">
+                <h4 class="footer-heading">
+                    ΛΑΒΕ ΤΟ ΜΗΝΙΑΙΟ NEWSLETTER ΜΟΥ, 1 ΠΑΡΑΓΡΑΦΟ ΧΩΡΙΣ ΦΛΟΥΦΛΑ. ΔΩΡΕΑΝ!
+                </h4>
+                <form class="newsletter-form">
+                    <input type="email" class="newsletter-input" placeholder="Το Email σου" required />
+                    <button type="submit" class="newsletter-button">ΕΓΓΡΑΦΗ</button>
+                </form>
+                <div class="footer-social">
+                    <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#" aria-label="X"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
             </div>
         </div>
-        <div class="footer-newsletter">
-            <h4 class="footer-heading">
-                GET MY ZERO FLUFF, 1 PARAGRAPH WEEKLY NEWSLETTER. FOR FREE!
-            </h4>
-            <form class="newsletter-form">
-                <input type="email" class="newsletter-input" placeholder="Your Email Address" required />
-                <button type="submit" class="newsletter-button">SIGN UP</button>
-            </form>
-            <div class="footer-social">
-                <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
-                <a href="#" aria-label="X"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+        <div class="footer-bottom">
+            <div class="footer-legal">
+                <a href="privacy.html" class="footer-link">ΠΟΛΙΤΙΚΗ ΑΠΟΡΡΗΤΟΥ</a>
+                <span class="footer-separator">|</span>
+                <a href="terms.html" class="footer-link">ΟΡΟΙ ΧΡΗΣΗΣ</a>
             </div>
+            <p class="footer-copy">© 2025 Tasos Misailidis. Με επιφύλαξη παντός δικαιώματος.</p>
         </div>
-    </div>
-    <div class="footer-bottom">
-        <div class="footer-legal">
-            <a href="privacy.html" class="footer-link">PRIVACY POLICY</a>
-            <span class="footer-separator">|</span>
-            <a href="terms.html" class="footer-link">TERMS OF SERVICE</a>
-        </div>
-        <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
-    </div>
-</footer>
+    </footer>
 
 </div>
 
