--- a/program-strength.html
+++ b/program-strength.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="el">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Strength & Size Hybrid | Tasos Misailidis</title>
 
@@ -16,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
 
     <script src="https://kit.fontawesome.com/a4df1a361f.js" crossorigin="anonymous"></script>
 
@@ -31,170 +30,170 @@
 
 <div class="page-container">
 
-<div class="promo-bar">Black Friday Sale – Up to 70% OFF!</div>
+    <div class="promo-bar">Black Friday Εκπτώσεις – Έως 70% OFF!</div>
 
-<header class="mobile-nav">
-    <button class="nav-icon nav-toggle" aria-label="Toggle menu">
-        <i class="fa-solid fa-bars"></i>
-    </button>
-    <a href="index.html" class="nav-logo">
-        <img src="IMAGES/logo.png" alt="Logo">
-    </a>
+    <header class="mobile-nav">
+        <button class="nav-icon nav-toggle" aria-label="Toggle menu">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <a href="index.html" class="nav-logo">
+            <img src="IMAGES/logo.png" alt="Logo">
+        </a>
 
-    <nav class="mobile-menu">
-        <a href="index.html">Home</a>
-        <a href="programs.html">Programs</a>
-        <a href="coaching.html">Coaching</a>
-        <a href="recipes.html">Recipes</a>
-        <a href="flexapil.html">Flexapil</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+        <nav class="mobile-menu">
+            <a href="index.html">Αρχική</a>
+            <a href="programs.html">Προγράμματα</a>
+            <a href="coaching.html">Coaching</a>
+            <a href="recipes.html">Συνταγές</a>
+            <a href="flexapil.html">Flexapil</a>
+            <a href="about.html">Σχετικά</a>
+            <a href="contact.html">Επικοινωνία</a>
+        </nav>
 
-    <button class="nav-icon nav-cart" aria-label="View cart">
-        <i class="fa-solid fa-cart-shopping"></i>
-    </button>
-</header>
+        <!--    <button class="nav-icon nav-cart" aria-label="View cart">-->
+        <!--        <i class="fa-solid fa-cart-shopping"></i>-->
+        <!--    </button>-->
+    </header>
 
-<main class="product-wrapper">
+    <main class="product-wrapper">
 
-    <section class="product-hero">
-        <div class="product-cover"
-             style="background-image: url('IMAGES/program-strength-cover.jpg');"></div>
+        <section class="product-hero">
+            <div class="product-cover"
+                 style="background-image: url('IMAGES/program-strength-cover.jpg');"></div>
 
-        <div class="product-main">
-            <p class="product-badge">Program • PDF Download</p>
-            <h1 class="product-title">Strength & Size Hybrid</h1>
-            <p class="product-subtitle">
-                A hybrid program that blends powerlifting-style strength work with bodybuilding volume
-                to help you get stronger and bigger at the same time.
-            </p>
+            <div class="product-main">
+                <p class="product-badge">Πρόγραμμα • Λήψη PDF</p>
+                <h1 class="product-title">Strength &amp; Size Hybrid</h1>
+                <p class="product-subtitle">
+                    Ένα υβριδικό πρόγραμμα που συνδυάζει προπονήσεις δύναμης τύπου powerlifting με bodybuilding όγκο,
+                    ώστε να γίνεις ταυτόχρονα πιο δυνατός και πιο μυώδης.
+                </p>
 
-            <div class="product-meta-row">
-                <p class="product-price">€34.99</p>
-                <p class="product-details">Intermediate • 10 Weeks • 4 days/week</p>
+                <div class="product-meta-row">
+                    <p class="product-price">€34.99</p>
+                    <p class="product-details">Μεσαίο επίπεδο • 10 Εβδομάδες • 4 ημέρες/εβδομάδα</p>
+                </div>
+
+                <button
+                        class="product-button-add"
+                        data-product-id="strength-size-hybrid"
+                        data-price="34.99">
+                    ΠΡΟΣΘΗΚΗ ΣΤΟ ΚΑΛΑΘΙ
+                </button>
+
+                <p class="product-note">
+                    <i class="fa-solid fa-dumbbell"></i>
+                    Εστίαση σε squat, bench, deadlift • Περιλαμβάνει hypertrophy accessories
+                </p>
             </div>
+        </section>
 
-            <button
-                    class="product-button-add"
-                    data-product-id="strength-size-hybrid"
-                    data-price="34.99">
-                ADD TO CART
-            </button>
-
-            <p class="product-note">
-                <i class="fa-solid fa-dumbbell"></i>
-                Squat, bench, deadlift focus • Includes hypertrophy accessories
+        <section class="product-section">
+            <h2 class="product-section-title">Τι Περιλαμβάνεται</h2>
+            <p>
+                Το <strong>Strength &amp; Size Hybrid</strong> είναι χτισμένο γύρω από βαριές πολυαρθρικές ασκήσεις
+                με στοχευμένη βοηθητική δουλειά. Ιδανικό αν θέλεις να βλέπεις τα κιλά σου να ανεβαίνουν,
+                αλλά ταυτόχρονα να δείχνεις και σαν bodybuilder.
             </p>
-        </div>
-    </section>
+            <ul class="product-list">
+                <li>10-εβδομάδων strength-focused template με ξεκάθαρη προοδευτικότητα</li>
+                <li>Δομημένη ένταξη squat, bench και deadlift μέσα στο πλάνο</li>
+                <li>Bodybuilding-style βοηθητικές ασκήσεις για μέγεθος και ισορροπία του φυσικού</li>
+                <li>Καθοδήγηση για deloads και αυτορρύθμιση (autoregulaton)</li>
+                <li>Προτάσεις για ζέσταμα και ramp-up sets</li>
+            </ul>
+        </section>
 
-    <section class="product-section">
-        <h2 class="product-section-title">What You Get</h2>
-        <p>
-            The <strong>Strength & Size Hybrid</strong> is built around heavy compound lifts with targeted accessory work.
-            Perfect if you want to see your numbers go up while still looking like a bodybuilder.
-        </p>
-        <ul class="product-list">
-            <li>10-week strength-focused template with clear progression</li>
-            <li>Squat, bench, and deadlift structure built into the plan</li>
-            <li>Bodybuilding-style accessory work for size and balance</li>
-            <li>Guidance on deloads and autoregulation</li>
-            <li>Warm-up and ramp-up set suggestions</li>
-        </ul>
-    </section>
+        <section class="product-section">
+            <h2 class="product-section-title">Είναι Αυτό το Πρόγραμμα για Εσένα;</h2>
+            <ul class="product-list">
+                <li>Λατρεύεις τη βαριά προπόνηση, αλλά σε νοιάζει επίσης η εμφάνιση του σώματός σου</li>
+                <li>Έχεις τουλάχιστον 1–2 χρόνια εμπειρίας με βάρη</li>
+                <li>Νιώθεις άνετα με την τεχνική σε squat, bench και deadlift</li>
+                <li>Μπορείς να δεσμευτείς σε 4 συγκεντρωμένες προπονήσεις την εβδομάδα</li>
+            </ul>
+        </section>
 
-    <section class="product-section">
-        <h2 class="product-section-title">Is This Program For You?</h2>
-        <ul class="product-list">
-            <li>You love heavy lifting but also care about physique</li>
-            <li>You have at least 1–2 years of lifting experience</li>
-            <li>You’re comfortable with squat, bench, and deadlift technique</li>
-            <li>You can commit to 4 focused sessions per week</li>
-        </ul>
-    </section>
-
-    <section class="product-section product-reviews">
-        <div class="product-reviews-header">
-            <h2 class="product-section-title">Reviews</h2>
-            <p class="product-rating">
-                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                <i class="fa-regular fa-star"></i>
-                <span>4.5 / 5 (21 reviews)</span>
-            </p>
-        </div>
-
-        <div class="reviews-grid">
-            <article class="review-card">
-                <p class="review-name">Alex M.</p>
-                <p class="review-stars">
+        <section class="product-section product-reviews">
+            <div class="product-reviews-header">
+                <h2 class="product-section-title">Κριτικές</h2>
+                <p class="product-rating">
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
+                    <span>4.5 / 5 (21 κριτικές)</span>
                 </p>
-                <p class="review-text">
-                    Loved how the heavy days and pump work mixed together. PRs and better physique.
-                </p>
-            </article>
-
-            <article class="review-card">
-                <p class="review-name">Giannis F.</p>
-                <p class="review-stars">
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                </p>
-                <p class="review-text">
-                    Benches went up, back got thicker, legs grew. Exactly what I wanted.
-                </p>
-            </article>
-        </div>
-    </section>
-
-</main>
-
-<footer class="site-footer">
-    <!-- same footer structure -->
-    <div class="footer-top">
-        <div class="footer-columns">
-            <div class="footer-column">
-                <h4 class="footer-heading">PROGRAMS</h4>
-                <a href="programs.html" class="footer-link">Training Programs</a>
-                <a href="coaching.html" class="footer-link">Online Coaching</a>
             </div>
-            <div class="footer-column">
-                <h4 class="footer-heading">SPONSORS</h4>
-                <a href="#" class="footer-link">Flexapil</a>
-                <a href="#" class="footer-link">Underarmour</a>
-                <a href="#" class="footer-link">Firtech</a>
+
+            <div class="reviews-grid">
+                <article class="review-card">
+                    <p class="review-name">Alex M.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Μου άρεσε πολύ ο συνδυασμός heavy days με pump δουλειά. PRs και καλύτερη φυσική εμφάνιση.
+                    </p>
+                </article>
+
+                <article class="review-card">
+                    <p class="review-name">Giannis F.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Το bench ανέβηκε, η πλάτη γέμισε, τα πόδια μεγάλωσαν. Ακριβώς αυτό που ήθελα.
+                    </p>
+                </article>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="site-footer">
+        <div class="footer-top">
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h4 class="footer-heading">ΠΡΟΓΡΑΜΜΑΤΑ</h4>
+                    <a href="programs.html" class="footer-link">Προγράμματα Προπόνησης</a>
+                    <a href="coaching.html" class="footer-link">Online Coaching</a>
+                </div>
+                <div class="footer-column">
+                    <h4 class="footer-heading">ΧΟΡΗΓΟΙ</h4>
+                    <a href="#" class="footer-link">Flexapil</a>
+                    <a href="https://www.underarmour.gr/" target="_blank" class="footer-link">Underarmour</a>
+                    <a href="https://www.firtech.gr/" target="_blank" class="footer-link">Firtech</a>
+                </div>
+            </div>
+            <div class="footer-newsletter">
+                <h4 class="footer-heading">
+                    ΛΑΒΕ ΤΟ ΜΗΝΙΑΙΟ NEWSLETTER ΜΟΥ, 1 ΠΑΡΑΓΡΑΦΟ ΧΩΡΙΣ ΦΛΟΥΦΛΑ. ΔΩΡΕΑΝ!
+                </h4>
+                <form class="newsletter-form">
+                    <input type="email" class="newsletter-input" placeholder="Το Email σου" required />
+                    <button type="submit" class="newsletter-button">ΕΓΓΡΑΦΗ</button>
+                </form>
+                <div class="footer-social">
+                    <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#" aria-label="X"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
             </div>
         </div>
-        <div class="footer-newsletter">
-            <h4 class="footer-heading">
-                GET MY ZERO FLUFF, 1 PARAGRAPH WEEKLY NEWSLETTER. FOR FREE!
-            </h4>
-            <form class="newsletter-form">
-                <input type="email" class="newsletter-input" placeholder="Your Email Address" required />
-                <button type="submit" class="newsletter-button">SIGN UP</button>
-            </form>
-            <div class="footer-social">
-                <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
-                <a href="#" aria-label="X"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+        <div class="footer-bottom">
+            <div class="footer-legal">
+                <a href="privacy.html" class="footer-link">ΠΟΛΙΤΙΚΗ ΑΠΟΡΡΗΤΟΥ</a>
+                <span class="footer-separator">|</span>
+                <a href="terms.html" class="footer-link">ΟΡΟΙ ΧΡΗΣΗΣ</a>
             </div>
+            <p class="footer-copy">© 2025 Tasos Misailidis. Με επιφύλαξη παντός δικαιώματος.</p>
         </div>
-    </div>
-    <div class="footer-bottom">
-        <div class="footer-legal">
-            <a href="privacy.html" class="footer-link">PRIVACY POLICY</a>
-            <span class="footer-separator">|</span>
-            <a href="terms.html" class="footer-link">TERMS OF SERVICE</a>
-        </div>
-        <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
-    </div>
-</footer>
+    </footer>
 
 </div>
 
