--- a/program-upper-lower.html
+++ b/program-upper-lower.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="el">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Upper / Lower Strength Program | Tasos Misailidis</title>
 
@@ -29,209 +29,212 @@
 
 <div class="page-container">
 
-<div class="promo-bar">
-    Black Friday Sale – Up to 70% OFF!
-</div>
+    <div class="promo-bar">
+        Black Friday Εκπτώσεις – Έως 70% OFF!
+    </div>
 
-<header class="mobile-nav">
-    <button class="nav-icon nav-toggle" aria-label="Toggle menu">
-        <i class="fa-solid fa-bars"></i>
-    </button>
+    <header class="mobile-nav">
+        <button class="nav-icon nav-toggle" aria-label="Toggle menu">
+            <i class="fa-solid fa-bars"></i>
+        </button>
 
-    <a href="index.html" class="nav-logo">
-        <img src="IMAGES/logo.png" alt="Logo">
-    </a>
+        <a href="index.html" class="nav-logo">
+            <img src="IMAGES/logo.png" alt="Logo">
+        </a>
 
-    <nav class="mobile-menu">
-        <a href="index.html">Home</a>
-        <a href="programs.html">Programs</a>
-        <a href="coaching.html">Coaching</a>
-        <a href="recipes.html">Recipes</a>
-        <a href="flexapil.html">Flexapil</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+        <nav class="mobile-menu">
+            <a href="index.html">Αρχική</a>
+            <a href="programs.html">Προγράμματα</a>
+            <a href="coaching.html">Coaching</a>
+            <a href="recipes.html">Συνταγές</a>
+            <a href="flexapil.html">Flexapil</a>
+            <a href="about.html">Σχετικά</a>
+            <a href="contact.html">Επικοινωνία</a>
+        </nav>
 
-    <button class="nav-icon nav-cart" aria-label="View cart">
-        <i class="fa-solid fa-cart-shopping"></i>
-    </button>
-</header>
+        <!--    <button class="nav-icon nav-cart" aria-label="View cart">-->
+        <!--        <i class="fa-solid fa-cart-shopping"></i>-->
+        <!--    </button>-->
+    </header>
 
-<main class="product-wrapper">
+    <main class="product-wrapper">
 
-    <!-- HERO -->
-    <section class="product-hero">
-        <div class="product-cover"
-             style="background-image: url('IMAGES/upperLower.png');">
-        </div>
-
-        <div class="product-main">
-            <p class="product-badge">Program • PDF Download</p>
-
-            <h1 class="product-title">Upper / Lower Strength Program</h1>
-
-            <p class="product-subtitle">
-                A structured, time-efficient 4-day routine built for lifters who want to develop muscle, improve
-                strength, and maintain optimal recovery throughout the week. Rooted in Tasos Misailidis’ evidence-based
-                coaching methods, this plan alternates between upper- and lower-body training to maximize progressive
-                overload and balanced growth.
-            </p>
-
-            <div class="product-meta-row">
-                <p class="product-price">€34.99</p>
-                <p class="product-details">Intermediate • 10 Weeks • 4 days/week</p>
+        <!-- HERO -->
+        <section class="product-hero">
+            <div class="product-cover"
+                 style="background-image: url('IMAGES/upperLower.png');">
             </div>
 
-            <button
-                    class="product-button-add"
-                    data-product-id="upper-lower"
-                    data-price="34.99">
-                ADD TO CART
-            </button>
+            <div class="product-main">
+                <p class="product-badge">Πρόγραμμα • Λήψη PDF</p>
 
-            <p class="product-note">
-                <i class="fa-solid fa-bolt"></i>
-                Instant download • Evidence-based strength split • Gym-based training
-            </p>
-        </div>
-    </section>
+                <h1 class="product-title">Upper / Lower Strength Program</h1>
 
-    <!-- WHAT YOU GET -->
-    <section class="product-section">
-        <h2 class="product-section-title">What You Get</h2>
-        <p>
-            The <strong>Upper / Lower Strength Program</strong> alternates between upper-body and lower-body sessions
-            twice per week to ensure balanced development and measurable strength progression. Every movement pattern —
-            push, pull, squat, and hinge — is strategically placed to maximize performance and recovery.
-        </p>
-
-        <ul class="product-list">
-            <li>Complete 4-day Upper / Lower weekly structure</li>
-            <li>Smart exercise selection based on strength & hypertrophy principles</li>
-            <li>10-week progression model for consistent overload</li>
-            <li>Warm-up and activation guidelines for safer lifting</li>
-            <li>RPE-based intensity cues for precise training effort</li>
-            <li>Technique notes and training tips to refine every movement</li>
-        </ul>
-    </section>
-
-    <!-- IS THIS FOR YOU -->
-    <section class="product-section">
-        <h2 class="product-section-title">Is This Program For You?</h2>
-        <p>This program is ideal if you:</p>
-
-        <ul class="product-list">
-            <li>Want to build strength and muscle without overtraining</li>
-            <li>Prefer a simple, efficient training split that fits a busy lifestyle</li>
-            <li>Enjoy structured programming with clear weekly progression</li>
-            <li>Can commit to 4 intentional sessions per week</li>
-            <li>Want to improve push, pull, hinge, and squat patterns consistently</li>
-        </ul>
-    </section>
-
-    <!-- REVIEWS -->
-    <section class="product-section product-reviews">
-        <div class="product-reviews-header">
-            <h2 class="product-section-title">Reviews</h2>
-            <p class="product-rating">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-regular fa-star"></i>
-                <span>4.7 / 5 (33 reviews)</span>
-            </p>
-        </div>
-
-        <div class="reviews-grid">
-
-            <article class="review-card">
-                <p class="review-name">Kostas D.</p>
-                <p class="review-stars">
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-regular fa-star"></i>
+                <p class="product-subtitle">
+                    Ένα δομημένο, αποδοτικό 4ήμερο πρόγραμμα για ασκούμενους που θέλουν να αναπτύξουν μυϊκή μάζα,
+                    να βελτιώσουν τη δύναμή τους και να διατηρήσουν άριστη αποκατάσταση μέσα στην εβδομάδα.
+                    Βασισμένο στις evidence-based μεθόδους coaching του Tasos Misailidis, αυτό το πλάνο
+                    εναλλάσσει προπονήσεις άνω και κάτω σώματος ώστε να μεγιστοποιήσει το progressive overload
+                    και την ισορροπημένη ανάπτυξη.
                 </p>
-                <p class="review-text">
-                    Strength went up across all lifts. Loved how balanced the sessions were. Perfect for busy weeks.
-                </p>
-            </article>
 
-            <article class="review-card">
-                <p class="review-name">Andreas S.</p>
-                <p class="review-stars">
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                <div class="product-meta-row">
+                    <p class="product-price">€34.99</p>
+                    <p class="product-details">Μεσαίο επίπεδο • 10 Εβδομάδες • 4 ημέρες/εβδομάδα</p>
+                </div>
+
+                <button
+                        class="product-button-add"
+                        data-product-id="upper-lower"
+                        data-price="34.99">
+                    ΠΡΟΣΘΗΚΗ ΣΤΟ ΚΑΛΑΘΙ
+                </button>
+
+                <p class="product-note">
+                    <i class="fa-solid fa-bolt"></i>
+                    Άμεση λήψη • Evidence-based strength split • Προπόνηση σε γυμναστήριο
+                </p>
+            </div>
+        </section>
+
+        <!-- WHAT YOU GET -->
+        <section class="product-section">
+            <h2 class="product-section-title">Τι Περιλαμβάνεται</h2>
+            <p>
+                Το <strong>Upper / Lower Strength Program</strong> εναλλάσσει προπονήσεις άνω και κάτω σώματος
+                δύο φορές την εβδομάδα, εξασφαλίζοντας ισορροπημένη ανάπτυξη και μετρήσιμη πρόοδο στη δύναμη.
+                Κάθε μοτίβο κίνησης — push, pull, squat και hinge — τοποθετείται στρατηγικά ώστε να
+                μεγιστοποιηθεί η απόδοση αλλά και η αποκατάσταση.
+            </p>
+
+            <ul class="product-list">
+                <li>Πλήρης εβδομαδιαία δομή 4 ημερών Upper / Lower</li>
+                <li>Έξυπνη επιλογή ασκήσεων βασισμένη σε αρχές δύναμης &amp; hypertrophy</li>
+                <li>10-εβδομάδων μοντέλο προοδευτικότητας για σταθερό overload</li>
+                <li>Οδηγίες για ζέσταμα και ενεργοποίηση για πιο ασφαλή προπόνηση</li>
+                <li>Ενδείξεις έντασης βασισμένες σε RPE για ακριβή έλεγχο της προσπάθειας</li>
+                <li>Τεχνικές σημειώσεις και training tips για να βελτιώσεις κάθε κίνηση</li>
+            </ul>
+        </section>
+
+        <!-- IS THIS FOR YOU -->
+        <section class="product-section">
+            <h2 class="product-section-title">Είναι Αυτό το Πρόγραμμα για Εσένα;</h2>
+            <p>Το πρόγραμμα είναι ιδανικό αν:</p>
+
+            <ul class="product-list">
+                <li>Θέλεις να χτίσεις δύναμη και μυϊκή μάζα χωρίς να υπερπροπονείσαι</li>
+                <li>Προτιμάς ένα απλό, αποδοτικό split που ταιριάζει σε φορτωμένη καθημερινότητα</li>
+                <li>Σου αρέσει η δομημένη προπόνηση με ξεκάθαρη εβδομαδιαία προοδευτικότητα</li>
+                <li>Μπορείς να δεσμευτείς σε 4 στοχευμένες προπονήσεις την εβδομάδα</li>
+                <li>Θέλεις να βελτιώσεις σταθερά push, pull, hinge και squat patterns</li>
+            </ul>
+        </section>
+
+        <!-- REVIEWS -->
+        <section class="product-section product-reviews">
+            <div class="product-reviews-header">
+                <h2 class="product-section-title">Κριτικές</h2>
+                <p class="product-rating">
                     <i class="fa-solid fa-star"></i>
-                </p>
-                <p class="review-text">
-                    Insane structure. Bench and deadlift improved noticeably. Very clear and effective programming.
-                </p>
-            </article>
-
-            <article class="review-card">
-                <p class="review-name">Eleni M.</p>
-                <p class="review-stars">
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
                     <i class="fa-regular fa-star"></i>
+                    <span>4.7 / 5 (33 κριτικές)</span>
                 </p>
-                <p class="review-text">
-                    Perfect routine for strength with great pacing. I felt recovered every session.
-                </p>
-            </article>
-
-        </div>
-    </section>
-
-</main>
-
-<!-- FOOTER -->
-<footer class="site-footer">
-    <div class="footer-top">
-        <div class="footer-columns">
-            <div class="footer-column">
-                <h4 class="footer-heading">PROGRAMS</h4>
-                <a href="programs.html" class="footer-link">Training Programs</a>
-                <a href="coaching.html" class="footer-link">Online Coaching</a>
             </div>
 
-            <div class="footer-column">
-                <h4 class="footer-heading">SPONSORS</h4>
-                <a href="#" class="footer-link">Flexapil</a>
-                <a href="#" class="footer-link">Underarmour</a>
-                <a href="#" class="footer-link">Firtech</a>
+            <div class="reviews-grid">
+
+                <article class="review-card">
+                    <p class="review-name">Kostas D.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Η δύναμη ανέβηκε σε όλες τις βασικές ασκήσεις. Μου άρεσε πόσο ισορροπημένες ήταν οι προπονήσεις.
+                        Ιδανικό για φορτωμένες εβδομάδες.
+                    </p>
+                </article>
+
+                <article class="review-card">
+                    <p class="review-name">Andreas S.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Τρομερή δομή. Bench και deadlift βελτιώθηκαν αισθητά. Πολύ ξεκάθαρο και αποτελεσματικό programming.
+                    </p>
+                </article>
+
+                <article class="review-card">
+                    <p class="review-name">Eleni M.</p>
+                    <p class="review-stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </p>
+                    <p class="review-text">
+                        Ιδανική ρουτίνα για δύναμη με πολύ καλή διαχείριση κόπωσης. Ένιωθα φρέσκια σε κάθε προπόνηση.
+                    </p>
+                </article>
+
+            </div>
+        </section>
+
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="site-footer">
+        <div class="footer-top">
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h4 class="footer-heading">ΠΡΟΓΡΑΜΜΑΤΑ</h4>
+                    <a href="programs.html" class="footer-link">Προγράμματα Προπόνησης</a>
+                    <a href="coaching.html" class="footer-link">Online Coaching</a>
+                </div>
+
+                <div class="footer-column">
+                    <h4 class="footer-heading">ΧΟΡΗΓΟΙ</h4>
+                    <a href="#" class="footer-link">Flexapil</a>
+                    <a href="https://www.underarmour.gr/" target="_blank" class="footer-link">Underarmour</a>
+                    <a href="https://www.firtech.gr/" target="_blank" class="footer-link">Firtech</a>
+                </div>
+            </div>
+
+            <div class="footer-newsletter">
+                <h4 class="footer-heading">
+                    ΛΑΒΕ ΤΟ ΜΗΝΙΑΙΟ NEWSLETTER ΜΟΥ, 1 ΠΑΡΑΓΡΑΦΟ ΧΩΡΙΣ ΦΛΟΥΦΛΑ. ΔΩΡΕΑΝ!
+                </h4>
+
+                <form class="newsletter-form">
+                    <input type="email" class="newsletter-input" placeholder="Το Email σου" required />
+                    <button type="submit" class="newsletter-button">ΕΓΓΡΑΦΗ</button>
+                </form>
+
+                <div class="footer-social">
+                    <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
+                    <a href="#" aria-label="X"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                </div>
             </div>
         </div>
 
-        <div class="footer-newsletter">
-            <h4 class="footer-heading">
-                GET MY ZERO FLUFF, 1 PARAGRAPH WEEKLY NEWSLETTER. FOR FREE!
-            </h4>
-
-            <form class="newsletter-form">
-                <input type="email" class="newsletter-input" placeholder="Your Email Address" required />
-                <button type="submit" class="newsletter-button">SIGN UP</button>
-            </form>
-
-            <div class="footer-social">
-                <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
-                <a href="#" aria-label="X"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+        <div class="footer-bottom">
+            <div class="footer-legal">
+                <a href="privacy.html" class="footer-link">ΠΟΛΙΤΙΚΗ ΑΠΟΡΡΗΤΟΥ</a>
+                <span class="footer-separator">|</span>
+                <a href="terms.html" class="footer-link">ΟΡΟΙ ΧΡΗΣΗΣ</a>
             </div>
+            <p class="footer-copy">© 2025 Tasos Misailidis. Με επιφύλαξη παντός δικαιώματος.</p>
         </div>
-    </div>
-
-    <div class="footer-bottom">
-        <div class="footer-legal">
-            <a href="privacy.html" class="footer-link">PRIVACY POLICY</a>
-            <span class="footer-separator">|</span>
-            <a href="terms.html" class="footer-link">TERMS OF SERVICE</a>
-        </div>
-        <p class="footer-copy">© 2025 Tasos Misailidis. All Rights Reserved.</p>
-    </div>
-</footer>
+    </footer>
 
 </div>
 
