--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <a href="contact.html">Επικοινωνία</a>
         </nav>
 
-        <button class="nav-icon nav-cart" aria-label="View cart">
-            <i class="fa-solid fa-cart-shopping"></i>
-        </button>
+<!--        <button class="nav-icon nav-cart" aria-label="View cart">-->
+<!--            <i class="fa-solid fa-cart-shopping"></i>-->
+<!--        </button>-->
     </header>
 
     <!-- ============================= -->
@@ -133,7 +133,7 @@
                     <p class="info-text">
                         Εξατομικευμένα προγράμματα προπόνησης & διατροφής ειδικά για εσένα.
                     </p>
-                    <button class="info-button">Μάθε Περισσότερα</button>
+                    <a href="coaching.html"><button class="info-button">Μάθε Περισσότερα</button></a>
                 </div>
             </article>
 
@@ -143,7 +143,7 @@
                     <p class="info-text">
                         Αποδεδειγμένοι, βήμα-βήμα οδηγοί PDF για γράμμωση, μυϊκή ανάπτυξη και πολλά περισσότερα.
                     </p>
-                    <button class="info-button">Μάθε Περισσότερα</button>
+                    <a href="programs.html"><button class="info-button">Μάθε Περισσότερα</button></a>
                 </div>
             </article>
 
@@ -168,8 +168,8 @@
                 <div class="footer-column">
                     <h4 class="footer-heading">ΧΟΡΗΓΟΙ</h4>
                     <a href="#" class="footer-link">Flexapil</a>
-                    <a href="#" class="footer-link">Underarmour</a>
-                    <a href="#" class="footer-link">Firtech</a>
+                    <a href="https://www.underarmour.gr/" target="_blank" class="footer-link">Underarmour</a>
+                    <a href="https://www.firtech.gr/" target="_blank" class="footer-link">Firtech</a>
                 </div>
             </div>
 
