--- a/programs.html
+++ b/programs.html
@@ -56,9 +56,9 @@
         <a href="contact.html">Επικοινωνία</a>
     </nav>
 
-    <button class="nav-icon nav-cart" aria-label="View cart">
-        <i class="fa-solid fa-cart-shopping"></i>
-    </button>
+<!--    <button class="nav-icon nav-cart" aria-label="View cart">-->
+<!--        <i class="fa-solid fa-cart-shopping"></i>-->
+<!--    </button>-->
 </header>
 
 <!-- ============================= -->
@@ -191,8 +191,8 @@
             <div class="footer-column">
                 <h4 class="footer-heading">ΧΟΡΗΓΟΙ</h4>
                 <a href="#" class="footer-link">Flexapil</a>
-                <a href="#" class="footer-link">Underarmour</a>
-                <a href="#" class="footer-link">Firtech</a>
+                <a href="https://www.underarmour.gr/" target="_blank" class="footer-link">Underarmour</a>
+                <a href="https://www.firtech.gr/" target="_blank" class="footer-link">Firtech</a>
             </div>
         </div>
 
